Added Currency Repository

--- a/Traineeship-Testing/Traineeship-Testing/Traineeship-Testing.csproj
+++ b/Traineeship-Testing/Traineeship-Testing/Traineeship-Testing.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Traineeship_Testing</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Traineeship.BasicTesting.Data\Traineeship.BasicTesting.Data.csproj" />
+  </ItemGroup>
+
 </Project>
