--- a/Traineeship-Testing/Traineeship.BasicTesting/Traineeship.BasicTesting.csproj
+++ b/Traineeship-Testing/Traineeship.BasicTesting/Traineeship.BasicTesting.csproj
@@ -9,7 +9,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -25,6 +39,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Traineeship.BasicTesting.Core\Traineeship.BasicTesting.Core.csproj" />
+    <ProjectReference Include="..\Traineeship.BasicTesting.Data\Traineeship.BasicTesting.Data.csproj" />
   </ItemGroup>
 
 </Project>
